--- a/src/views/presentation.twig
+++ b/src/views/presentation.twig
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+    <main>
+
     <h1>Présentation général de Jean Forteroche.</h1>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sapien velit, aliquet eget commodo nec,
@@ -18,5 +20,7 @@
         pellentesque ex, id consequat mi nisl quis eros. Integer ornare libero quis risus fermentum consequat.
         Mauris pharetra odio sagittis, vulputate magna at, lobortis nulla. Proin efficitur, nisi vel finibus elementum,
         orci sem volutpat eros, eget ultrices velit mi.</p>
+
+    </main>
 
 {% endblock %}
