--- a/src/views/subscribe.twig
+++ b/src/views/subscribe.twig
@@ -10,30 +10,30 @@
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="addon-wrapping">Votre Pseudo</span>
+                <label for="pseudo" class="input-group-text" id="addon-wrapping">Votre Pseudo</label>
             </div>
-            <input type="text" class="form-control" placeholder="Pseudo" aria-label="pseudo" name="pseudo" aria-describedby="addon-wrapping" required>
+            <input id="pseudo" type="text" class="form-control" placeholder="Pseudo" aria-label="pseudo" name="pseudo" aria-describedby="addon-wrapping" required>
         </div>
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="addon-wrapping">Votre mail</span>
+                <label for="mail" class="input-group-text" id="addon-wrapping">Votre mail</label>
             </div>
-            <input type="email" class="form-control" placeholder="mail" aria-label="mail" name="mail" aria-describedby="addon-wrapping" required>
+            <input id="mail" type="email" class="form-control" placeholder="mail" aria-label="mail" name="mail" aria-describedby="addon-wrapping" required>
         </div>
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="addon-wrapping">Votre mot de passe</span>
+                <label for="password" class="input-group-text" id="addon-wrapping">Votre mot de passe</label>
             </div>
-            <input type="password" class="form-control" placeholder="Mot de passe" aria-label="password" name="pass" aria-describedby="addon-wrapping" required>
+            <input id="password" type="password" class="form-control" placeholder="Mot de passe" aria-label="password" name="pass" aria-describedby="addon-wrapping" required>
         </div>
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="addon-wrapping">Confirmez votre mot de passe</span>
+                <label for="password2" class="input-group-text" id="addon-wrapping">Confirmez votre mot de passe</label>
             </div>
-            <input type="password" class="form-control" placeholder="Mot de passe" aria-label="password" name="pass_check" aria-describedby="addon-wrapping" required>
+            <input id="password2" type="password" class="form-control" placeholder="Mot de passe" aria-label="password" name="pass_check" aria-describedby="addon-wrapping" required>
         </div>
 
         <button type="submit" class="btn btn-primary">Envoyer</button>
