--- a/src/views/chapters.twig
+++ b/src/views/chapters.twig
@@ -6,21 +6,24 @@
 
 {% block content %}
 
+    <main>
+
     <h1>Voici tous les chapitres disponibles pour le moment :</h1>
 
 
     {% for chapter in chapters %}
 
-        <div class="card">
-            <h5 class="card-header">{{ chapter.title | nl2br }}</h5>
+        <section class="card">
+            <h2 class="card-header">{{ chapter.title | nl2br }}</h2>
             <div class="card-body">
-                <h6 class="card-text">{{ chapter.creation_date_fr }}</h6>
+                <h3 class="card-text">{{ chapter.creation_date_fr }}</h3>
                 <p class="card-text">{{ chapter.content | nl2br | slice(0, 250) }}</p>
                 <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=chapter&id={{ chapter.id }}" class="card-link">Lire plus...</a>
             </div>
-        </div>
+        </section>
 
     {% endfor %}
 
+    </main>
 
 {% endblock %}
