--- a/src/views/contact.twig
+++ b/src/views/contact.twig
@@ -8,30 +8,34 @@
 
 {% block content %}
 
+    <main>
+
     <h1>Contactez moi !</h1>
 
     <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?acces=sendmail">
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="addon-wrapping">Votre nom</span>
+                <label for="name" class="input-group-text" id="addon-wrapping">Votre nom</label>
             </div>
-            <input type="text" class="form-control" placeholder="Nom" aria-label="Username" name="name" aria-describedby="addon-wrapping" required>
+            <input id="name" type="text" class="form-control" placeholder="Nom" aria-label="Username" name="name" aria-describedby="addon-wrapping" required>
         </div>
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="addon-wrapping">Votre e-mail</span>
+                <label for="mail" class="input-group-text" id="addon-wrapping">Votre e-mail</label>
             </div>
-            <input type="email" class="form-control" placeholder="Mail" aria-label="mail" name="mail" aria-describedby="addon-wrapping" required>
+            <input id="mail" type="email" class="form-control" placeholder="Mail" aria-label="mail" name="mail" aria-describedby="addon-wrapping" required>
         </div>
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="addon-wrapping">Votre message</span>
+                <label for="message" class="input-group-text" id="addon-wrapping">Votre message</label>
             </div>
-            <textarea class="form-control" aria-label="With textarea" name="message" required></textarea>
+            <textarea id="message" class="form-control" aria-label="With textarea" name="message" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Envoyer</button>
 
     </form>
+
+    </main>
 
 {% endblock %}
