--- a/src/views/home.twig
+++ b/src/views/home.twig
@@ -22,14 +22,14 @@
     <h1>Voici le dernier chapitre publié : </h1>
 
 
-    <div class="card border-dark">
-        <h5 class="card-header">{{ chapter.title | nl2br}}</h5>
+    <section class="card border-dark">
+        <h2 class="card-header">{{ chapter.title | nl2br}}</h2>
         <div class="card-body">
-            <h6 class="card-text">{{ chapter.creation_date_fr }}</h6>
+            <h3 class="card-text">{{ chapter.creation_date_fr }}</h3>
             <p class="card-text">{{ chapter.content | nl2br | slice(0, 250) }}</p>
             <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=chapter&id={{ chapter.id }}" class="card-link">Lire plus...</a>
         </div>
-    </div>
+    </section>
 
 
 {% endblock %}
