--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,11 @@ body {
     justify-content: center;
 }
 
+.mt {
+    margin-top: 15rem;
+    padding-top: 5rem;
+}
+
 h3 {
     font-size: 1.2rem;
 }
@@ -49,6 +54,7 @@ section {
 
 p {
     justify-content: center;
+    text-align: justify;
     margin: 2rem;
 }
 
@@ -123,5 +129,31 @@ footer {
     -webkit-border-radius: 30%;
     -moz-border-radius: 30%;
     border-radius: 30%;
+}
 
+img {
+    width: 100%;
+    height: 700px;
+}
+
+@media ( max-width: 769px) {
+
+    /*--- CARROUSEL   ---*/
+    img {
+        height: 300px;
+    }
+
+    .carousel-inner{
+        height: 300px;
+        margin-top: 5rem;
+    }
+
+    main{
+        margin-top: 2rem;
+    }
+
+    h1{
+        margin: 1rem 2rem;
+    }
+    
 }
