--- a/src/views/connection.twig
+++ b/src/views/connection.twig
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+    <main>
+
     <h1>Connectez vous</h1>
 
     <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?acces=connected">
@@ -25,6 +27,6 @@
         <button type="submit" class="btn btn-primary">Envoyer</button>
     </form>
 
-    <p class="error">{{ error }}</p>
+    </main>
 
 {% endblock %}
