--- a/src/views/contact.twig
+++ b/src/views/contact.twig
@@ -1,10 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}
-
-    <title>Contactez moi</title>
-
-{% endblock %}
+{% block title %}Contactez moi{% endblock %}
 
 {% block content %}
 
