--- a/src/views/subscribe.twig
+++ b/src/views/subscribe.twig
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+    <main>
+
     <h1>Inscivez vous !</h1>
 
     <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?acces=postsubscribe">
@@ -38,5 +40,7 @@
 
         <button type="submit" class="btn btn-primary">Envoyer</button>
     </form>
+
+    </main>
 
 {% endblock %}
