--- a/src/views/admin.twig
+++ b/src/views/admin.twig
@@ -4,9 +4,10 @@
 
 {% block content %}
 
-    <h1>Bienvenue dans votre espace d'administration Jean</h1>
 
     <section>
+
+        <h1 class="mt">Bienvenue dans votre espace d'administration Jean</h1>
 
         <ul class="list-group">
             <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -45,7 +46,7 @@
             <textarea class="form-control" aria-label="content" name="content"></textarea>
 
        <button type="submit" class="btn btn-primary">Publier</button>
-        <button type="submit" class="btn btn-warning" formaction="https://jeanforteroche.valentin-antoin.fr/index.php?acces=savechap">Saauvegarder</button>
+        <button type="submit" class="btn btn-warning" formaction="https://jeanforteroche.valentin-antoin.fr/index.php?acces=savechap">Sauvegarder</button>
 
     </form>
     </section>
@@ -57,33 +58,35 @@
 
         {% for chapterHold in chaptersHold %}
 
-            <div class="card border-dark">
+            <div class="card">
                 <h2 class="card-header">{{ chapterHold.title | nl2br}}</h2>
                 <div class="card-body">
                     <h3 class="card-text">{{ chapterHold.creation_date_fr }}</h3>
                     <p class="card-text">{{ chapterHold.content | nl2br }}</p>
+                    <div class="btncontainer">
                     <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=modchap&id={{ chapterHold.id }}"><button type="button" class="btn btnAdmin btn-warning">Continuer</button></a>
                     <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=delchap&id={{ chapterHold.id }}"><button type="button" class="btn btnAdmin btn-danger">Supprimer</button></a>
+                    </div>
                 </div>
             </div>
 
         {% endfor %}
 
-
+    </section>
+    <section>
 
         <h2 class="mt" id="comments">Retrouvez ici tous les commentaires qui sont signalés.</h2>
 
         {%  for comment in comments %}
 
             <div class="card">
+                <h5 class="card-header">Posté par : {{ comment.user_pseudo }}, le :{{ comment.creation_date_fr }}</h5>
                 <div class="card-body">
-                    <h5 class="card-title">Posté par : {{ comment.user_pseudo }}</h5>
-                    <h6 class="card-text">Le {{ comment.creation_date_fr }}</h6>
                     <p class="card-text">{{ comment.content }}</p>
-
+                    <div class="btncontainer">
                     <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=valcom&id={{ comment.id }}"><button type="button" class="btn btnAdmin btn-primary">Valider</button></a>
                     <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=delcom&id={{ comment.id }}"><button type="button" class="btn btnAdmin btn-danger">Supprimer</button></a>
-
+                    </div>
                 </div>
             </div>
 
