--- a/src/views/presentation.twig
+++ b/src/views/presentation.twig
@@ -4,7 +4,6 @@
 
 {% block content %}
 
-
     <h1>Présentation général de Jean Forteroche.</h1>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sapien velit, aliquet eget commodo nec,
@@ -13,8 +12,9 @@
         elementum sed pellentesque a, pharetra eu eros. Etiam facilisis placerat euismod. Nam faucibus neque arcu,
         quis accumsan leo tincidunt varius. In vel diam enim. Sed id ultrices ligula. Maecenas at urna arcu. Sed quis
         nulla sapien. Nam felis mauris, tincidunt at convallis id, tempor molestie libero. Quisque viverra sollicitudin
-        nisl sit amet hendrerit. Etiam sit amet arcu sem. Morbi eu nibh condimentum, interdum est quis, tempor nisi.
-        Vivamus convallis erat in pharetra elementum. Phasellus metus neque, commodo vitae venenatis sed, pellentesque
+        nisl sit amet hendrerit. Etiam sit amet arcu sem. Morbi eu nibh condimentum, interdum est quis, tempor nisi.</p>
+
+     <p>Vivamus convallis erat in pharetra elementum. Phasellus metus neque, commodo vitae venenatis sed, pellentesque
         non purus. Pellentesque egestas convallis suscipit. Ut luctus, leo quis porta vulputate, purus purus
         pellentesque ex, id consequat mi nisl quis eros. Integer ornare libero quis risus fermentum consequat.
         Mauris pharetra odio sagittis, vulputate magna at, lobortis nulla. Proin efficitur, nisi vel finibus elementum,
