--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,41 +5,13 @@ body {
     font-family: Ubuntu;
 }
 
-.card {
-    font-family: sofia;
-    width: 80%;
-    margin-left: 10%;
-    margin-bottom: 1rem;
-}
-
 .controls {
     margin-left: 2rem;
-}
-
-.chapterContent {
-    border-bottom: 6px solid #343a40;
-    -webkit-border-radius: 30%;
-    -moz-border-radius: 30%;
-    border-radius: 30%;
-    padding-bottom: 5rem;
-    justify-content: center;
 }
 
 .mt {
     margin-top: 15rem;
     padding-top: 5rem;
-}
-
-h3 {
-    font-size: 1.2rem;
-}
-
-h4 {
-    font-size: 1rem;
-}
-
-.navbar-text {
-    margin-left: 20%;
 }
 
 main {
@@ -58,29 +30,6 @@ p {
     margin: 2rem;
 }
 
-/*---   HEADER   ---*/
-nav > a:first-child{
-    margin-left: 0;
-}
-
-.btnAdmin {
-    width: 20%;
-    margin-left: 1%;
-}
-
-.btnChap {
-    width: 20%;
-    margin-left: 18%;
-}
-
-.list-group {
-    width: 60%;
-    margin-left: 20%;
-}
-
-
-
-/*---   MAIN   ---*/
 h1 {
     text-decoration: underline;
     text-align: center;
@@ -94,25 +43,6 @@ h2 {
     text-align: center;
 }
 
-/*---   FORM   ---*/
-
-form,
-button{
-    width: 50%;
-    margin-left: 25%;
-}
-
-form > div,
-button{
-    margin-top: 2rem;
-}
-
-/*---   CARROUSEL   ---*/
-
-.carousel-inner {
-    height: 700px;
-}
-
 footer {
     display: flex;
     justify-content: space-around;
@@ -124,11 +54,97 @@ footer {
     border-radius: 30%;
 }
 
+
+/*---   CARDS   ---*/
+
+.card {
+    font-family: sofia;
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 1rem;
+}
+
+.chapterContent {
+    border-bottom: 6px solid #343a40;
+    -webkit-border-radius: 30%;
+    -moz-border-radius: 30%;
+    border-radius: 30%;
+    padding-bottom: 5rem;
+    justify-content: center;
+}
+
+.btnChap {
+    width: 20%;
+    margin-left: 18%;
+}
+
+h3 {
+    font-size: 1.2rem;
+}
+
+h4 {
+    font-size: 1rem;
+}
+
+
+/*---   HEADER   ---*/
+
+nav > a:first-child{
+    margin-left: 0;
+}
+
+.btnAdmin {
+    width: 20%;
+    margin-left: 1%;
+}
+
+.navbar-text {
+    margin-left: 20%;
+}
+
+
+/*---   FORM   ---*/
+
+form {
+    width: 70%;
+    margin-left: 15%;
+}
+
+button {
+    width: 40%;
+    margin-left: 30%;
+}
+
+.btnadmin {
+    width: 35%;
+    margin-left: 10%;
+}
+
+.list-group {
+    width: 60%;
+    margin-left: 20%;
+}
+
+form > div,
+button{
+    margin-top: 2rem;
+}
+
+
+/*---   CARROUSEL   ---*/
+
+.carousel-inner {
+    height: 700px;
+}
+
+
 img {
     width: 100%;
     height: 700px;
 }
 
+
+/*--------   TABLET HORIZONTAL   --------*/
 
 @media ( max-width: 1024px) {
 
@@ -138,14 +154,13 @@ img {
         width: 80%;
         margin: auto;
     }
-
-
 }
 
 
+/*--------   TABLET VERTICAL   --------*/
+
 @media ( max-width: 768px) {
 
-    /*--- CARROUSEL   ---*/
     img {
         height: 300px;
     }
@@ -177,10 +192,10 @@ img {
         width: 90%;
         margin: auto;
     }
-
-
-    
 }
+
+
+/*--------   MOBILE   --------*/
 
 @media (max-width: 375px) {
 
