Add nbCommentPb Count

--- a/src/views/admin.twig
+++ b/src/views/admin.twig
@@ -23,6 +23,10 @@
                 <span class="badge badge-secondary badge-pill">{{ nbComment }}</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
+                Nombre de commentaire signalé
+                <span class="badge badge-secondary badge-pill">{{ nbCommentPb }}</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
                 Nombre d'utilisateur enregistré
                 <span class="badge badge-secondary badge-pill">{{ nbUser }}</span>
             </li>
