--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,21 @@
 /*---   GLOBAL   ---*/
 
+* {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+}
+
 body {
     background-image: url("../img/paper.jpg");
-    font-family: Ubuntu;
+    font-family: Ubuntu, serif;
+    min-height: 100%;
+    margin: 0;
+    position: relative;
+    padding-bottom: 10rem;
 }
 
 .controls {
@@ -52,23 +65,24 @@ footer {
     -webkit-border-radius: 30%;
     -moz-border-radius: 30%;
     border-radius: 30%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 
 /*---   CARDS   ---*/
 
 .card {
-    font-family: sofia;
+    font-family: sofia, serif;
     width: 80%;
     margin-left: 10%;
     margin-bottom: 1rem;
 }
 
 .chapterContent {
-    border-bottom: 6px solid #343a40;
-    -webkit-border-radius: 30%;
-    -moz-border-radius: 30%;
-    border-radius: 30%;
+    border-bottom: 3px solid #343a40;
     padding-bottom: 5rem;
     justify-content: center;
 }
