Fix title recuperation

--- a/src/views/modify.twig
+++ b/src/views/modify.twig
@@ -12,7 +12,7 @@
             <div class="input-group-prepend">
                 <label for="title" class="input-group-text" id="addon-wrapping">Titre</label>
             </div>
-            <input id="title" type="text" class="form-control" aria-label="title" name="title" aria-describedby="addon-wrapping" placeholder="{{ chapter.title }}">
+            <input id="title" type="text" class="form-control" aria-label="title" name="title" aria-describedby="addon-wrapping" value="{{ chapter.title }}">
         </div>
 
         <textarea class="form-control" aria-label="content" name="content" rows="22" cols ="100">{{ chapter.content }}</textarea>
