Fix footer height

--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -94,7 +94,7 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin">Acceuil</a>
+                                <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin">Accueil</a>
                                 <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin#newchap">Nouveau chapitre</a>
                                 <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin#savechap">Chapitres en attente </a>
                                 <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin#comments">modération</a>
@@ -128,9 +128,9 @@
 <!--   FOOTER   -->
     <footer>
 
-        <a href="#facebook" title="Facebook"><i class="fab fa-facebook-square fa-4x"></i></a>
-        <a href="#instagram" title="Instagram"><i class="fab fa-instagram fa-4x"></i></a>
-        <a href="#twitter" title="Twitter"><i class="fab fa-twitter-square fa-4x"></i></a>
+        <a href="#facebook" title="Facebook"><i class="fab fa-facebook-square fa-2x"></i></a>
+        <a href="#instagram" title="Instagram"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="#twitter" title="Twitter"><i class="fab fa-twitter-square fa-2x"></i></a>
 
     </footer>
 
