--- a/src/views/admin.twig
+++ b/src/views/admin.twig
@@ -91,7 +91,7 @@
         {%  for comment in comments %}
 
         <div class="card">
-            <h5 class="card-header">Posté par : {{ comment.user_pseudo }}, le :{{ comment.creation_date_fr }} à propos du chapitre {{ comment.chapter_id }}</h5>
+            <h5 class="card-header">Posté par : {{ comment.user_pseudo }}, le :{{ comment.creation_date_fr }} // <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=chapter&id={{ comment.chapter_id }}"> Lien vers le chapitre</a> </h5>
             <div class="card-body">
                 <p class="card-text">{{ comment.content }}</p>
                 <div class="btncontainer">
