--- a/src/views/presentation.twig
+++ b/src/views/presentation.twig
@@ -8,6 +8,8 @@
 
     <p>{{ presentation.content | nl2br }}</p>
 
+{% if session.admin is defined %}
+
     <div class="btncontainer">
 
         <a class="controls" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=modchap&id={{ presentation.id }}">
@@ -16,5 +18,6 @@
 
     </div>
 
+{% endif %}
 
 {% endblock %}
