--- a/src/views/admin.twig
+++ b/src/views/admin.twig
@@ -11,20 +11,23 @@
 
         <ul class="list-group">
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                Nombre de chapitre publié
-                <span class="badge badge-secondary badge-pill">{{ nbChapter }}</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
                 <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin#savechap" class="linkoff">Nombre de chapitre en attente</a>
                 <span class="badge badge-secondary badge-pill">{{ nbChapterHold }}</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                Nombre de commentaire posté
-                <span class="badge badge-secondary badge-pill">{{ nbComment }}</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
                 <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin#comments" class="linkoff">Nombre de commentaire signalé</a>
                 <span class="badge badge-secondary badge-pill">{{ nbCommentPb }}</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <a class="linkoff">   //  Informations générales  //   </a>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Nombre de chapitre publié
+                <span class="badge badge-secondary badge-pill">{{ nbChapter }}</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Nombre de commentaire posté
+                <span class="badge badge-secondary badge-pill">{{ nbComment }}</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 Nombre d'utilisateur enregistré
